Bug 317917 - Muon Crash after click on a link in the minecraft starter
Summary: Muon Crash after click on a link in the minecraft starter
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: 2.0.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 318148 318370 318406 318702 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-06 09:41 UTC by FabiB
Modified: 2013-04-22 08:23 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.1
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (1.43 KB, text/plain)
2013-04-07 17:13 UTC, kennyzz69
Details
New crash information added by DrKonqi (1.49 KB, text/plain)
2013-04-10 08:04 UTC, HughDaniel
Details
New crash information added by DrKonqi (1.58 KB, text/plain)
2013-04-13 09:14 UTC, Marc Launois
Details
New crash information added by DrKonqi (1.28 KB, text/plain)
2013-04-14 05:44 UTC, Andreas Hencke
Details
New crash information added by DrKonqi (1.33 KB, text/plain)
2013-04-14 17:35 UTC, Fatih Yazıcı
Details
New crash information added by DrKonqi (1.29 KB, text/plain)
2013-04-15 17:17 UTC, Dima Ryazanov
Details
New crash information added by DrKonqi (1.28 KB, text/plain)
2013-04-17 05:02 UTC, christian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FabiB 2013-04-06 09:41:20 UTC
Application: muon-installer (2.0.0)
KDE Platform Version: 4.10.2
Qt Version: 4.8.4
Operating System: Linux 3.8.0-14-lowlatency x86_64
Distribution: Ubuntu Raring Ringtail (development branch)

-- Information about the crash:
1. download minecraft (you dont have to buy the game)
wget https://s3.amazonaws.com/MinecraftDownload/launcher/minecraft.jar
2. start the launcher
java -Xmx1024M -Xms512M -cp minecraft.jar net.minecraft.LauncherFrame
3. click on (for example) the link for the latest update
"Minecraft 1.5.1"

Next: muon installer will crash

i really dont know why this happens. we use openjdk7 on kubuntu 13.04 daily

The crash can be reproduced every time.

-- Backtrace:
Application: Muon-Programmverwaltung (muon-installer), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#6  QVector (v=..., this=0x7fff655e5420) at /usr/include/qt4/QtCore/qvector.h:123
#7  QForeachContainer (t=..., this=0x7fff655e5420) at /usr/include/qt4/QtCore/qglobal.h:2367
#8  ResourcesModel::resourceByPackageName (this=0x0, name=...) at /build/buildd/muon-2.0.0/libmuon/resources/ResourcesModel.cpp:263
#9  0x000000000041dc4a in MainWindow::triggerOpenApplication (this=0x11878e0) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:502
#10 0x000000000041dd0f in MainWindow::openApplication (this=0x11878e0, app=...) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:495
#11 0x000000000041b7d1 in main (argc=2, argv=0x7fff655e56c8) at /build/buildd/muon-2.0.0/installer/main.cpp:67

Reported using DrKonqi
Comment 1 kennyzz69 2013-04-07 17:13:09 UTC
Created attachment 78712 [details]
New crash information added by DrKonqi

muon-installer (2.0.0) on KDE Platform 4.10.2 using Qt 4.8.4

After successfull update after installing kubuntu 13.04 beta2, I launch firefox web installer via start menu > applications > internet > mozilla web browser installer and obtain this bug.
no possibility to install firefox.
Nota : I'm not advanced user

-- Backtrace (Reduced):
#6  QVector (v=..., this=0x7fffee9527d0) at /usr/include/qt4/QtCore/qvector.h:123
#7  QForeachContainer (t=..., this=0x7fffee9527d0) at /usr/include/qt4/QtCore/qglobal.h:2367
#8  ResourcesModel::resourceByPackageName (this=0x0, name=...) at /build/buildd/muon-2.0.0/libmuon/resources/ResourcesModel.cpp:263
#9  0x000000000041dc4a in MainWindow::triggerOpenApplication (this=0x2240000) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:502
#10 0x000000000041dd0f in MainWindow::openApplication (this=0x2240000, app=...) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:495
Comment 2 cricklewood.majestic 2013-04-08 22:49:19 UTC
Same here: After successfull update after installing kubuntu 13.04 beta2, I launch firefox web installer via start menu > applications > internet > mozilla Firefox browser installer and it crashes.
Comment 3 HughDaniel 2013-04-10 08:04:45 UTC
Created attachment 78763 [details]
New crash information added by DrKonqi

muon-installer (2.0.0) on KDE Platform 4.10.2 using Qt 4.8.4

- What I was doing when the application crashed: I had clicked on the icon for "kubuntu-firefox-installer", it crashed multiple times.

- Unusual behavior I noticed:
  The package "kubuntu-firefox-installer" and "firefox" clashed over a file that both though twas thiers, I had to used dpkg to deal with the problem.

-- Backtrace (Reduced):
#6  QVector (v=..., this=0x7fffa85ccad0) at /usr/include/qt4/QtCore/qvector.h:123
#7  QForeachContainer (t=..., this=0x7fffa85ccad0) at /usr/include/qt4/QtCore/qglobal.h:2367
#8  ResourcesModel::resourceByPackageName (this=0x0, name=...) at /build/buildd/muon-2.0.0/libmuon/resources/ResourcesModel.cpp:263
#9  0x000000000041dc4a in MainWindow::triggerOpenApplication (this=0x226d9b0) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:502
#10 0x000000000041dd0f in MainWindow::openApplication (this=0x226d9b0, app=...) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:495
Comment 4 Jekyll Wu 2013-04-10 17:41:35 UTC
*** Bug 318148 has been marked as a duplicate of this bug. ***
Comment 5 Marc Launois 2013-04-13 09:14:56 UTC
Created attachment 78856 [details]
New crash information added by DrKonqi

muon-installer (2.0.0) on KDE Platform 4.10.2 using Qt 4.8.4

- What I was doing when the application crashed:J'était sur le forum kubuntu.
En fait le rapport de bug, pour ce qui me concerne est innexacte car muon ne plante pas. 
L'erreur est que dans le menu, près la mise à jour de 12.10 vers 13.04, c'est Mozilla Fire Fox INSTALLER qui apparaît alors que Fire Fox est , en fait, déja installé.
Par ailleurs, la désinstallation avec muon est impossible.

-- Backtrace (Reduced):
#6  QVector (v=..., this=0x7fffcb005cb0) at /usr/include/qt4/QtCore/qvector.h:123
#7  QForeachContainer (t=..., this=0x7fffcb005cb0) at /usr/include/qt4/QtCore/qglobal.h:2367
#8  ResourcesModel::resourceByPackageName (this=0x0, name=...) at /build/buildd/muon-2.0.0/libmuon/resources/ResourcesModel.cpp:263
#9  0x000000000041dc4a in MainWindow::triggerOpenApplication (this=0x2533030) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:502
#10 0x000000000041dd0f in MainWindow::openApplication (this=0x2533030, app=...) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:495
Comment 6 Andreas Hencke 2013-04-14 05:44:44 UTC
Created attachment 78889 [details]
New crash information added by DrKonqi

muon-installer (2.0.0) on KDE Platform 4.10.2 using Qt 4.8.4

- What I was doing when the application crashed:
I started firefox-installer and muon crashed.

-- Backtrace (Reduced):
#6  QVector (v=..., this=0x7ffff04412c0) at /usr/include/qt4/QtCore/qvector.h:123
#7  QForeachContainer (t=..., this=0x7ffff04412c0) at /usr/include/qt4/QtCore/qglobal.h:2367
#8  ResourcesModel::resourceByPackageName (this=0x0, name=...) at /build/buildd/muon-2.0.0/libmuon/resources/ResourcesModel.cpp:263
#9  0x000000000041dc4a in MainWindow::triggerOpenApplication (this=0x222c680) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:502
#10 0x000000000041dd0f in MainWindow::openApplication (this=0x222c680, app=...) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:495
Comment 7 Fatih Yazıcı 2013-04-14 17:35:25 UTC
Created attachment 78898 [details]
New crash information added by DrKonqi

muon-installer (2.0.0) on KDE Platform 4.10.2 using Qt 4.8.4

- What I was doing when the application crashed:
I only attempted to install Mozilla Firefox Browser with preconfigured installer shortcut.

-- Backtrace (Reduced):
#6  QVector (v=..., this=0x7ffff8c82da0) at /usr/include/qt4/QtCore/qvector.h:123
#7  QForeachContainer (t=..., this=0x7ffff8c82da0) at /usr/include/qt4/QtCore/qglobal.h:2367
#8  ResourcesModel::resourceByPackageName (this=0x0, name=...) at /build/buildd/muon-2.0.0/libmuon/resources/ResourcesModel.cpp:263
#9  0x000000000041dc4a in MainWindow::triggerOpenApplication (this=0x1ec6540) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:502
#10 0x000000000041dd0f in MainWindow::openApplication (this=0x1ec6540, app=...) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:495
Comment 8 Jekyll Wu 2013-04-15 06:08:30 UTC
*** Bug 318370 has been marked as a duplicate of this bug. ***
Comment 9 Dima Ryazanov 2013-04-15 17:17:09 UTC
Created attachment 78936 [details]
New crash information added by DrKonqi

muon-installer (2.0.0) on KDE Platform 4.10.2 using Qt 4.8.4

- What I was doing when the application crashed:

Clicked on the Mozilla Firefox Browser Installer

-- Backtrace (Reduced):
#6  QVector (v=..., this=0x7fffe94e4320) at /usr/include/qt4/QtCore/qvector.h:123
#7  QForeachContainer (t=..., this=0x7fffe94e4320) at /usr/include/qt4/QtCore/qglobal.h:2367
#8  ResourcesModel::resourceByPackageName (this=0x0, name=...) at /build/buildd/muon-2.0.0/libmuon/resources/ResourcesModel.cpp:263
#9  0x000000000041dc4a in MainWindow::triggerOpenApplication (this=0x8841a0) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:502
#10 0x000000000041dd0f in MainWindow::openApplication (this=0x8841a0, app=...) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:495
Comment 10 Jekyll Wu 2013-04-15 21:48:06 UTC
*** Bug 318406 has been marked as a duplicate of this bug. ***
Comment 11 christian 2013-04-17 05:02:43 UTC
Created attachment 78975 [details]
New crash information added by DrKonqi

muon-installer (2.0.0) on KDE Platform 4.10.2 using Qt 4.8.4

- What I was doing when the application crashed:

I was clicking on the firefox installer and muon crashes

-- Backtrace (Reduced):
#7  QVector (v=..., this=0xbf916f10) at /usr/include/qt4/QtCore/qvector.h:123
#8  QForeachContainer (t=..., this=0xbf916f10) at /usr/include/qt4/QtCore/qglobal.h:2367
#9  ResourcesModel::resourceByPackageName (this=0x0, name=...) at /build/buildd/muon-2.0.0/libmuon/resources/ResourcesModel.cpp:263
#10 0x0806041d in MainWindow::triggerOpenApplication (this=this@entry=0x902e6d8) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:502
#11 0x080604f3 in MainWindow::openApplication (this=0x902e6d8, app=...) at /build/buildd/muon-2.0.0/installer/MainWindow.cpp:495
Comment 12 Jonathan Thomas 2013-04-18 15:07:09 UTC
Git commit 223aecd0306ac398c66422b8a3641f2be25112eb by Jonathan Thomas.
Committed on 18/04/2013 at 17:05.
Pushed by jmthomas into branch '2.0'.

Do not crash if we try to navigate to an application page before the ResourcesModel has been created.
(We'll try again later after everything else has been initialized)
FIXED-IN:2.0.1

M  +3    -0    installer/MainWindow.cpp

http://commits.kde.org/muon/223aecd0306ac398c66422b8a3641f2be25112eb
Comment 13 Jonathan Thomas 2013-04-18 15:07:19 UTC
Git commit b32fd439d227da06c9d4d3e7f7fc2ef1e677a336 by Jonathan Thomas.
Committed on 18/04/2013 at 17:05.
Pushed by jmthomas into branch 'master'.

Do not crash if we try to navigate to an application page before the ResourcesModel has been created.
(We'll try again later after everything else has been initialized)
FIXED-IN:2.0.1

M  +3    -0    installer/MainWindow.cpp

http://commits.kde.org/muon/b32fd439d227da06c9d4d3e7f7fc2ef1e677a336
Comment 14 Jekyll Wu 2013-04-22 08:23:15 UTC
*** Bug 318702 has been marked as a duplicate of this bug. ***