Do not crash if we try to navigate to an application page before the ResourcesModel has been created. (We'll try again later after everything else has been initialized)

BUG:317917
FIXED-IN:2.0.1